--- a/src/views/personas/lista.hbs
+++ b/src/views/personas/lista.hbs
@@ -1,3 +1,4 @@
+
 <div class="container">
     <div class="row mt-5">
         <h5 class="text-center text-uppercase p-2">Lista de empleados</h5>
@@ -43,7 +44,8 @@
                 </div>
                 <div class="card-body">
                     <p>Presiona este botón para que puedas registrar a una persona en la aplicación</p>
-                    <a href="/add" class="btn btn-primary" style="height: 40px;">Ir a crear</a> <!-- Estilo en línea para la altura -->
+                                                 <a href="/add" class="btn btn-outline-secondary btn-lg"  id="card-color" >Crear una Persona</a>
+
                 </div>
             </div>
         {{/if}}
