--- a/src/views/partials/navegations.hbs
+++ b/src/views/partials/navegations.hbs
@@ -125,7 +125,7 @@ margin: 10px;
         <div class="col-md-10 col-sm-12" id="encabezado">
             <div class="card">
                 <div class="card-body d-flex justify-content-between align-items-center">
-                    <a href="#" class="navbar-brand" id="navbar-brand">Zava Gestión de empleados</a>
+                    <a href="#" class="navbar-brand" id="navbar-brand">ZAVA Gestión de Empleados</a>
                     <div class="user-info">
                         <h6><i class="fas fa-user" id="icono_usuario"></i>  Alejandra zapien</h6>
                         <h6>zapienvazqueza@gmail.com</h6>
